--- a/myproject/blog/templates/blog/page.html
+++ b/myproject/blog/templates/blog/page.html
@@ -44,6 +44,7 @@
 			border-bottom-right-radius: 50px;
 			user-select: none;
 			webkit-user-select: none;
+                        font-family: Sans-Serif;
 		}
 		.containe {
 			width: 70%;
@@ -134,6 +135,7 @@
 			padding: 8px;
 			user-select: none;
 			webkit-user-select: none;
+                        font-family: 'Vazir';
 		}
 
 		#toastBox.show {
